--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,26 +8,27 @@ env:
 phases:
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
+      - echo "Logging in to Amazon ECR..."
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REPO_URI
-      - echo "Generating Docker image tag..."
+  build:
+    commands:
+      - echo "Build started on $(date)"
+      - cd app
+      - echo "Building Docker image..."
       - |
         if [ -z "$CODEBUILD_RESOLVED_SOURCE_VERSION" ]; then
           IMAGE_TAG=$(date +%Y%m%d%H%M%S)
         else
           IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
         fi
-      - echo "Using image tag: $IMAGE_TAG"
-      - export IMAGE_TAG
-  build:
-    commands:
-      - echo "Build started on $(date)"
-      - cd app
-      - echo "Building Docker image..."
-      - docker build -t ${ECR_REPO_URI}:${IMAGE_TAG} -t ${ECR_REPO_URI}:latest .
+        echo "Using image tag: $IMAGE_TAG"
+        docker build -t ${ECR_REPO_URI}:${IMAGE_TAG} -t ${ECR_REPO_URI}:latest .
+        docker tag ${ECR_REPO_URI}:latest ${ECR_REPO_URI}:${IMAGE_TAG}
+        echo $IMAGE_TAG > ../image_tag.txt
   post_build:
     commands:
       - echo "Build completed on $(date)"
+      - IMAGE_TAG=$(cat image_tag.txt)
       - echo "Pushing Docker images..."
       - docker push ${ECR_REPO_URI}:${IMAGE_TAG}
       - docker push ${ECR_REPO_URI}:latest
