--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,7 @@ phases:
       - echo "Determining image tag..."
       - export IMAGE_TAG=$(echo ${CODEBUILD_RESOLVED_SOURCE_VERSION:-"manual-$(date +%Y%m%d%H%M%S)"} | cut -c1-7)
       - echo "Using IMAGE_TAG=$IMAGE_TAG"
+
   build:
     commands:
       - echo "Build started on $(date)"
@@ -20,18 +21,18 @@ phases:
       - echo "Building Docker image..."
       - docker build -t ${ECR_REPO_URI}:${IMAGE_TAG} -t ${ECR_REPO_URI}:latest .
       - cd ..
+
   post_build:
     commands:
       - echo "Build completed on $(date)"
       - echo "Pushing Docker images..."
       - docker push ${ECR_REPO_URI}:${IMAGE_TAG}
       - docker push ${ECR_REPO_URI}:latest
-      - echo "Creating imagedefinitions.json in root directory..."
-      - printf '[{"name":"exercise-hello-svc","imageUri":"%s"}]' ${ECR_REPO_URI}:${IMAGE_TAG} > imagedefinitions.json
-      - ls -l imagedefinitions.json
+      - echo "Creating imagedefinitions.json for ECS..."
+      - printf '[{"name":"app","imageUri":"%s"}]' ${ECR_REPO_URI}:${IMAGE_TAG} > imagedefinitions.json
+      - echo "imagedefinitions.json created successfully:"
       - cat imagedefinitions.json
 
 artifacts:
   files:
     - imagedefinitions.json
-  discard-paths: yes
