--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,33 +4,50 @@ env:
   variables:
     AWS_DEFAULT_REGION: "us-east-1"
     ECR_REPO_URI: "043309328819.dkr.ecr.us-east-1.amazonaws.com/exercise-hello-repo"
+    IMAGE_NAME: "app"
 
 phases:
+  install:
+    runtime-versions:
+      docker: 20
+    commands:
+      - echo ">>> Install phase – enabling strict bash mode"
+      - export DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1
+      - |
+        cat <<'EOF' > /tmp/common.sh
+        set -euo pipefail
+        shopt -s inherit_errexit
+        EOF
   pre_build:
     commands:
-      - echo "Logging in to Amazon ECR..."
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ECR_REPO_URI
-      - echo "Determining image tag..."
-      - export IMAGE_TAG=$(echo ${CODEBUILD_RESOLVED_SOURCE_VERSION:-"manual-$(date +%Y%m%d%H%M%S)"} | cut -c1-7)
+      - source /tmp/common.sh
+      - echo ">>> Logging in to Amazon ECR..."
+      - aws ecr get-login-password --region "$AWS_DEFAULT_REGION" | docker login --username AWS --password-stdin "$ECR_REPO_URI"
+      - echo ">>> Determining image tag..."
+      - export IMAGE_TAG=$(echo "${CODEBUILD_RESOLVED_SOURCE_VERSION:-manual-$(date +%Y%m%d%H%M%S)}" | cut -c1-12)
       - echo "Using IMAGE_TAG=$IMAGE_TAG"
-
+      - export DOCKER_IMAGE="${ECR_REPO_URI}:${IMAGE_TAG}"
   build:
     commands:
-      - echo "Build started on $(date)"
-      - cd app
-      - echo "Building Docker image..."
-      - docker build -t ${ECR_REPO_URI}:${IMAGE_TAG} -t ${ECR_REPO_URI}:latest .
-      - cd ..
-
+      - source /tmp/common.sh
+      - echo ">>> Build started on $(date)"
+      - echo "Building Docker image $DOCKER_IMAGE"
+      - docker build \
+          --file app/Dockerfile \
+          --build-arg BUILD_DATE="$(date -u +%Y-%m-%dT%H:%M:%SZ)" \
+          --build-arg VCS_REF="$IMAGE_TAG" \
+          --tag "$DOCKER_IMAGE" \
+          --tag "${ECR_REPO_URI}:latest" \
+          app
   post_build:
     commands:
-      - echo "Build completed on $(date)"
+      - source /tmp/common.sh
+      - echo ">>> Build completed on $(date)"
       - echo "Pushing Docker images..."
-      - docker push ${ECR_REPO_URI}:${IMAGE_TAG}
-      - docker push ${ECR_REPO_URI}:latest
+      - docker push "$DOCKER_IMAGE"
+      - docker push "${ECR_REPO_URI}:latest"
       - echo "Creating imagedefinitions.json for ECS..."
-      - printf '[{"name":"app","imageUri":"%s"}]' ${ECR_REPO_URI}:${IMAGE_TAG} > imagedefinitions.json
-      - echo "imagedefinitions.json created successfully:"
+      - printf '[{"name":"%s","imageUri":"%s"}]' "$IMAGE_NAME" "$DOCKER_IMAGE" > imagedefinitions.json
       - cat imagedefinitions.json
 
 artifacts:
